--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,7 @@
     <title>Hello</title>
 </head>
 <body>
+    <h1>Hello World</h1>
     <p>Hello to Git Hub</p>
     <p>New commit</p>
     <p>Third commit</p>
